--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100&family=Quicksand:wght@400;500;600&family=Roboto:wght@100&display=swap');
 
-*´{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,7 +10,7 @@
 }
 
 body{
-    font-family: 'Josefin+Sans';
+    font-family: 'Quicksand', sans-serif;
     background-color: #1B1726;
 }
 
@@ -42,12 +42,12 @@ img{
     right: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .logo{
     color: red;
-    font-weight: 800PX;
+    font-weight: 800px;
     font-size: 25px;
     text-transform: uppercase;
 }
@@ -76,14 +76,13 @@ img{
 }
 
 .menu_icono{
-    width: 25px;
+    width: 1px;
 }
 
 .menu label{
     cursor: pointer;
     display: none;
 }
-
 
 .header-content{
     display: flex;
@@ -126,7 +125,6 @@ color: red;
     color: white;
 }
 
-
 .btn-1:hover{
     color: red;
 }
@@ -144,13 +142,12 @@ h2{
 
 .popular-content{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
 
 .popular-content img{
     width: 150px;
 }
-
 
 .product-content{
     display: grid;
@@ -240,10 +237,14 @@ footer{
     display:flex;
 }
 
-.link ul li a> a{
+.link ul li > a{
     font-size: 17px;
     color: white;
     margin-right: 20px;
+}
+
+.link ul li > a:hover{   
+    color: red;
 }
 
 @media(max-width:791px){
