--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img{
 
 .header{
     background-image: url(Imagenes/bg.webp);
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -39,13 +39,14 @@ img{
     top: 0;
     left: 0;
     right: 0;
+    display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .logo{
     color: red;
-    font-size: 25;
+    font-size: 25px;
     font-weight: 800;
     text-transform: uppercase;
 }
@@ -111,7 +112,7 @@ menu.navbar ul li {
 
 .btn-1,.btn-2,.btn-3{
     display: inline-block;
-    padding: 11px;
+    padding: 11px 35px;
     border:2px solid red;
     border-radius: 25px;
     margin-right: 25px;
@@ -230,13 +231,13 @@ footer{
     display:flex;
 }
 
-.link ul li >a{
+.link ul li > a{
     font-size: 17px;
     color: white;
     margin-right: 20px;
 }
 
-.link ul li >a:hover{
+.link ul li > a:hover{
     color: red;
 }
 
@@ -277,7 +278,7 @@ footer{
 
     .header-txt{
         text-align: center;
-        flex-basis: 50%;
+        flex-basis: 100%;
     }
 
     .header-txt h1{
