--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ img{
     padding: 80px 0;
 }
 
-.menu{
+.menu {
     position: absolute;
     top: 0;
     left: 0;
@@ -44,39 +44,48 @@ img{
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     color: red;
     font-size: 25px;
     font-weight: 800;
     text-transform: uppercase;
+    margin-bottom: 190px;
 }
 
-menu.navbar ul li {
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu ul li {
     position: relative;
-    float: left;
+    display: inline-block; /* Cambiado de float: left; */
+    margin-bottom: 190px;
 }
 
-.menu .navbar ul li a{
+.menu ul li a {
     font-size: 18px;
     padding: 20px;
     color: white;
     font-weight: 600;
     display: block;
+    text-decoration: none; /* Agregado para quitar subrayado predeterminado */
 }
 
-.menu .navbar ul li a:hover{
+.menu ul li a:hover {
     color: red;
 }
 
-#menu{
+#menu {
     display: none;
 }
 
-.menu-icono{
+.menu-icono {
     width: 25px;
 }
 
-.menu label{
+.menu label {
     cursor: pointer;
     display: none;
 }
@@ -156,8 +165,10 @@ menu.navbar ul li {
     gap: 50px;
 }
 
-.product-container h2{
+h2{
     color: white;
+    font-size: 20px;
+    align-items: center;
 }
 
 .product-1{
@@ -252,61 +263,66 @@ footer{
 }
 
 @media(max-width:991px){
-    .menu{
+    /* Reglas del menú */
+    .menu {
         padding: 20px;
     }
 
-    .menu label{
+    .menu label {
         display: initial;
+        margin-bottom: 190px;
     }
 
-    .menu .navbar{
+    .menu .navbar {
         position: absolute;
         top: 100%;
-        left:0;
+        left: 0;
         right: 0;
         background-color: red;
         display: none;
+        margin-top: -53%;
+        align-items: center;
     }
 
-    .menu .navbar ul li a:hover{
-        color: #1B1726;
-    }
-
-    .menu .navbar ul li{
+    .menu .navbar ul li {
         width: 100%;
+        margin-bottom: -30%;
     }
 
-    #menu:checked ~ .navbar{
+    #menu:checked ~ .navbar {
         display: initial;
     }
 
-    .header{
+    /* Reglas de la cabecera */
+    .header {
         min-height: 0vh;
-        padding: 80px 30px 50px 30px;
+        /* padding: 80px 30px 50px 30px;
+        object-fit: contain; */
     }
 
-    .header-txt{
+    .header-txt {
         text-align: center;
         flex-basis: 100%;
     }
 
-    .header-txt h1{
+    .header-txt h1 {
         font-size: 50px;
         margin-bottom: 15px;
     }
 
-    .butons{
+    .butons {
         justify-content: center;
     }
 
-    .btn-1:last-of-type{
+    .btn-1:last-of-type {
         margin-right: 0;
     }
 
-    .popular{
+    .popular-content{
         display: none;
+        visibility: hidden;
     }
+
 
     .product{
         padding: 30px;
