--- a/regis.css
+++ b/regis.css
@@ -8,6 +8,72 @@
 }
 
 
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    color: green;
+    font-size: 21px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 190px;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu ul li {
+    position: relative;
+    display: inline-block; /* Cambiado de float: left; */
+    margin-bottom: 190px;
+}
+
+.menu ul li a {
+    font-size: 18px;
+    padding: 20px;
+    color: green;
+    font-weight: 600;
+    display: block;
+    text-decoration: none; /* Agregado para quitar subrayado predeterminado */
+}
+
+.menu ul li a:hover {
+    color: greenyellow;
+}
+
+#menu {
+    display: none;
+}
+
+.menu-icono {
+    width: 25px;
+}
+
+.menu label {
+    cursor: pointer;
+    display: none;
+}
+
+.header-content{
+    display: flex;   
+}
+
+.header-txt{
+    flex-basis: 50%;
+}
+
 body{
     display: flex;
     justify-content: center;
@@ -117,4 +183,36 @@ body{
 
 .register-link p a:hover{
     text-decoration: underline;
+}
+
+@media(max-width:991px){
+    /* Reglas del menú */
+    .menu {
+        padding: 20px;
+    }
+
+    .menu label {
+        display: initial;
+        margin-bottom: 190px;
+    }
+
+    .menu .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: rgba(213, 245, 227,0);
+        display: none;
+        margin-top: -50%;
+        align-items: center;
+    }
+
+    .menu .navbar ul li {
+        width: 100%;
+        margin-bottom: -30%;
+    }
+
+    #menu:checked ~ .navbar {
+        display: initial;
+    }
 }
