--- a/login.css
+++ b/login.css
@@ -207,7 +207,7 @@ body{
         top: 100%;
         left: 0;
         right: 0;
-        background-color: ;
+        background-color:rgba(174, 214, 241,0) ;
         display: none;
         margin-top: -50%;
         align-items: center;
