--- a/login.css
+++ b/login.css
@@ -30,7 +30,7 @@ body{
 }
 
 .logo {
-    color: (192,219,232,0.2);
+    color: blue;
     font-size: 21px;
     font-weight: 800;
     text-transform: uppercase;
@@ -153,7 +153,7 @@ body{
     text-decoration: underline;
 }
 
-.wrapper .btn{
+.wrapper .btn {
     width: 100%;
     height: 45px;
     background: rgba(192,219,232,0.2);
